force-app/main/default/objects/Parque_Tecnol_gico_do_Cliente__c/Parque_Tecnol_gico_do_Cliente__c.object-meta.xml
<CustomObject>
    <label>Parque Tecnológico do Cliente</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>N° do registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parque Tecnológico do Cliente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>