force-app/main/default/objects/Parque_Tecnol_gico_do_Cliente__c/fields/Detalhamento_da_Conta_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Detalhamento_da_Conta_Relacionado__c</fullName>
    <label>Detalhamento da Conta Relacionado</label>
    <referenceTo>Detalhe_da_Conta__c</referenceTo>
    <relationshipLabel>Parque Tecnológico do Cliente</relationshipLabel>
    <relationshipName>Parque_Tecnol_gico_do_Cliente</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>