force-app/main/default/objects/Parque_Tecnol_gico_do_Cliente__c/fields/Marcas__c.field-meta.xml
<CustomField>
    <fullName>Marcas__c</fullName>
    <label>Marcas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Concorrentes</valueSetName>
    </valueSet>
</CustomField>