force-app/main/default/objects/Parque_Tecnol_gico_do_Cliente__c/fields/Tipo_de_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Equipamento__c</fullName>
    <label>Tipo de Equipamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APARELHO DE ANESTESIA</fullName>
            </value>
            <value>
                <fullName>ARCO CIRURGICO</fullName>
            </value>
            <value>
                <fullName>ASPIRADOR CIRURGICO</fullName>
            </value>
            <value>
                <fullName>BABYPAP</fullName>
            </value>
            <value>
                <fullName>BERÇO ACRÍLICO</fullName>
            </value>
            <value>
                <fullName>BERÇO AQUECIDO</fullName>
            </value>
            <value>
                <fullName>BIPAP</fullName>
            </value>
            <value>
                <fullName>BISTURI ELETRICO</fullName>
            </value>
            <value>
                <fullName>BOMBA DE INFUSÃO DE SERINGA COM ALVO CONTROLE</fullName>
            </value>
            <value>
                <fullName>BOMBA DE INFUSÃO DE SERINGA SEM ALVO CONTROLE</fullName>
            </value>
            <value>
                <fullName>BOMBA DE INFUSÃO VOLUMÉTRICA</fullName>
            </value>
            <value>
                <fullName>CAMA HOSPITALAR ELÉTRICA</fullName>
            </value>
            <value>
                <fullName>CAMARA DE CONSERVAÇÃO</fullName>
            </value>
            <value>
                <fullName>CARDIOTOCOGRAFO</fullName>
            </value>
            <value>
                <fullName>CARDIOVERSOR/DESFIBRILADOR</fullName>
            </value>
            <value>
                <fullName>CENTRAL DE MONITORIZAÇÃO</fullName>
            </value>
            <value>
                <fullName>CENTRIFUGA</fullName>
            </value>
            <value>
                <fullName>CONCENTRADOR DE O2</fullName>
            </value>
            <value>
                <fullName>CPAP</fullName>
            </value>
            <value>
                <fullName>DESFIBRILADOR EXTERNO AUTOMÁTICO (DEA)</fullName>
            </value>
            <value>
                <fullName>ELETROCARDIOGRAFO</fullName>
            </value>
            <value>
                <fullName>ELETROENCEFALÓGRAFO</fullName>
            </value>
            <value>
                <fullName>ELEVADOR DE TRANSPOSIÇÃO DE LEITO</fullName>
            </value>
            <value>
                <fullName>ESTATIVA</fullName>
            </value>
            <value>
                <fullName>FOCO CIRURGICO DE TETO</fullName>
            </value>
            <value>
                <fullName>FOCO CIRURGICO PORTATIL</fullName>
            </value>
            <value>
                <fullName>FOCO REFLETOR AMBULATORIAL</fullName>
            </value>
            <value>
                <fullName>FOTOTERAPIA</fullName>
            </value>
            <value>
                <fullName>MESA CIRURGICA</fullName>
            </value>
            <value>
                <fullName>MONITOR MULTIPARAMETRICO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>